--- a/Aura.Desktop/electron/splash.html
+++ b/Aura.Desktop/electron/splash.html
@@ -18,9 +18,11 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      min-height: 100vh;
       height: 100vh;
       overflow: hidden;
       position: relative;
+      padding: 20px;
     }
 
     body::before {
@@ -67,14 +69,19 @@
     .splash-container {
       text-align: center;
       max-width: 500px;
-      padding: 120px 40px 40px 40px;
+      padding: 80px 40px 60px 40px;
       position: relative;
       z-index: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      min-height: 100%;
+      box-sizing: border-box;
     }
 
     .icon-container {
       margin-bottom: 24px;
-      margin-top: 60px;
+      margin-top: 0;
       animation: fadeInScale 0.5s ease-out 0.2s both;
     }
 
@@ -130,7 +137,7 @@
       text-transform: uppercase;
       opacity: 0.7;
       font-weight: 500;
-      margin-bottom: 60px;
+      margin-bottom: 40px;
       animation: fadeIn 0.5s ease-out 1.0s both;
     }
 
@@ -147,9 +154,10 @@
 
     .status-message {
       font-size: 14px;
-      margin-bottom: 20px;
+      margin-bottom: 16px;
       min-height: 20px;
       opacity: 0.85;
+      padding: 0 20px;
     }
 
     .progress-bar {
@@ -158,7 +166,7 @@
       background: rgba(255, 255, 255, 0.08);
       border-radius: 3px;
       overflow: hidden;
-      margin: 0 auto 24px;
+      margin: 0 auto 20px;
       animation: fadeIn 0.3s ease-out 1.2s both;
     }
 
