--- a/Aura.Desktop/electron/splash.html
+++ b/Aura.Desktop/electron/splash.html
@@ -69,25 +69,25 @@
     .splash-container {
       text-align: center;
       max-width: 500px;
-      padding: 80px 40px 60px 40px;
+      padding: 60px 40px 60px 40px;
       position: relative;
       z-index: 1;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       min-height: 100%;
       box-sizing: border-box;
     }
 
     .icon-container {
-      margin-bottom: 24px;
-      margin-top: 0;
+      margin-bottom: 20px;
+      margin-top: 20px;
       animation: fadeInScale 0.5s ease-out 0.2s both;
     }
 
     .app-icon {
-      width: 128px;
-      height: 128px;
+      width: 100px;
+      height: 100px;
       filter: drop-shadow(0 8px 32px rgba(99, 102, 241, 0.4))
               drop-shadow(0 4px 16px rgba(255, 107, 53, 0.3));
       animation: iconPulse 2s ease-in-out infinite;
@@ -123,6 +123,7 @@
       font-size: 84px;
       font-weight: 800;
       margin-bottom: 10px;
+      margin-top: 0;
       text-shadow:
         0 2px 4px rgba(0, 0, 0, 0.4),
         0 8px 16px rgba(99, 102, 241, 0.3),
