--- a/Aura.Desktop/electron/splash.html
+++ b/Aura.Desktop/electron/splash.html
@@ -69,19 +69,19 @@
     .splash-container {
       text-align: center;
       max-width: 500px;
-      padding: 60px 40px 60px 40px;
+      padding: 80px 40px 60px 40px;
       position: relative;
       z-index: 1;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: center;
       min-height: 100%;
       box-sizing: border-box;
     }
 
     .icon-container {
-      margin-bottom: 20px;
-      margin-top: 20px;
+      margin-bottom: 24px;
+      margin-top: 30px;
       animation: fadeInScale 0.5s ease-out 0.2s both;
     }
 
@@ -123,7 +123,6 @@
       font-size: 84px;
       font-weight: 800;
       margin-bottom: 10px;
-      margin-top: 0;
       text-shadow:
         0 2px 4px rgba(0, 0, 0, 0.4),
         0 8px 16px rgba(99, 102, 241, 0.3),
