--- a/Aura.Desktop/electron/splash.html
+++ b/Aura.Desktop/electron/splash.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; script-src 'self' 'unsafe-inline';">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aura Video Studio - Loading</title>
+  <title>Aura Video Studio</title>
   <style>
     * {
       margin: 0;
@@ -13,62 +12,50 @@
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      /* Deep cosmic gradient - inspired by web version but adapted for desktop */
-      background: linear-gradient(135deg, #0a0f1a 0%, #1a1f2e 30%, #1a1626 60%, #0f0f1a 85%, #050510 100%);
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: #0A0A0F;
+      color: white;
       display: flex;
       align-items: center;
       justify-content: center;
+      min-height: 100vh;
       height: 100vh;
       overflow: hidden;
-      color: #ffffff;
       position: relative;
+      padding: 20px;
     }
 
-    /* Animated cosmic background with multiple layers */
     body::before {
       content: '';
       position: absolute;
-      inset: 0;
-      background:
-        radial-gradient(ellipse at 20% 30%, rgba(99, 102, 241, 0.2) 0%, transparent 50%),
-        radial-gradient(ellipse at 80% 70%, rgba(255, 107, 53, 0.18) 0%, transparent 50%),
-        radial-gradient(ellipse at 50% 50%, rgba(59, 130, 246, 0.1) 0%, transparent 70%);
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: radial-gradient(circle at 30% 50%, rgba(255, 107, 53, 0.15) 0%, transparent 70%);
+      animation: gradientShift 6s ease-in-out infinite alternate;
       pointer-events: none;
-      z-index: 1;
-      animation: cosmicShift 12s ease-in-out infinite;
+      z-index: 0;
     }
 
-    @keyframes cosmicShift {
-      0%, 100% {
-        opacity: 1;
-        transform: scale(1) rotate(0deg);
-      }
-      33% {
-        opacity: 0.8;
-        transform: scale(1.1) rotate(2deg);
-      }
-      66% {
-        opacity: 0.9;
-        transform: scale(0.95) rotate(-1deg);
-      }
-    }
-
-    /* Vignette for depth */
     body::after {
       content: '';
       position: absolute;
-      inset: 0;
-      background: radial-gradient(ellipse at center, transparent 0%, rgba(5, 5, 10, 0.7) 100%);
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: radial-gradient(circle at 70% 50%, rgba(99, 102, 241, 0.12) 0%, transparent 70%);
+      animation: gradientShift 6s ease-in-out infinite alternate-reverse;
       pointer-events: none;
-      z-index: 1;
+      z-index: 0;
     }
 
-    /* Particle canvas for enhanced starfield */
+    @keyframes gradientShift {
+      from { transform: translateX(-10%) translateY(-5%); }
+      to { transform: translateX(10%) translateY(5%); }
+    }
+
     #particles {
       position: absolute;
       top: 0;
@@ -81,229 +68,117 @@
 
     .splash-container {
       text-align: center;
-      padding: 60px 40px;
-      max-width: 800px;
+      max-width: 500px;
+      padding: 80px 40px 60px 40px;
       position: relative;
-      z-index: 2;
-      animation: containerFadeIn 1.2s cubic-bezier(0.34, 1.56, 0.64, 1);
+      z-index: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      min-height: 100%;
+      box-sizing: border-box;
     }
 
-    @keyframes containerFadeIn {
+    .icon-container {
+      margin-bottom: 24px;
+      margin-top: 30px;
+      animation: fadeInScale 0.5s ease-out 0.2s both;
+    }
+
+    .app-icon {
+      width: 100px;
+      height: 100px;
+      filter: drop-shadow(0 8px 32px rgba(99, 102, 241, 0.4))
+              drop-shadow(0 4px 16px rgba(255, 107, 53, 0.3));
+      animation: iconPulse 2s ease-in-out infinite;
+    }
+
+    @keyframes iconPulse {
+      0%, 100% {
+        transform: scale(1);
+        filter: drop-shadow(0 8px 32px rgba(99, 102, 241, 0.4))
+                drop-shadow(0 4px 16px rgba(255, 107, 53, 0.3))
+                brightness(1);
+      }
+      50% {
+        transform: scale(1.05);
+        filter: drop-shadow(0 10px 40px rgba(99, 102, 241, 0.5))
+                drop-shadow(0 6px 20px rgba(255, 107, 53, 0.4))
+                brightness(1.1);
+      }
+    }
+
+    @keyframes fadeInScale {
       from {
         opacity: 0;
-        transform: translateY(30px) scale(0.95);
+        transform: scale(0.9);
       }
       to {
         opacity: 1;
-        transform: translateY(0) scale(1);
+        transform: scale(1);
       }
     }
 
-    .logo-container {
-      margin-bottom: 48px;
-      overflow: visible;
-    }
-
-    /* Desktop-optimized icon - larger and more prominent */
-    .logo-icon {
-      display: inline-block;
-      margin-bottom: 32px;
-      animation: iconFloat 5s ease-in-out infinite;
-      filter: drop-shadow(0 0 40px rgba(99, 102, 241, 0.5))
-              drop-shadow(0 0 30px rgba(255, 107, 53, 0.4))
-              drop-shadow(0 30px 80px rgba(0, 0, 0, 0.6));
-    }
-
-    @keyframes iconFloat {
-      0%, 100% {
-        transform: translateY(0) scale(1) rotate(0deg);
-      }
-      50% {
-        transform: translateY(-20px) scale(1.08) rotate(1deg);
-      }
-    }
-
-    /* Modern geometric icon design - inspired by clapperboard but distinct */
-    .app-icon {
-      width: 160px;
-      height: 160px;
-      position: relative;
-    }
-
-    .icon-base {
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(135deg, #2D3748 0%, #4A5568 100%);
-      border-radius: 24px;
-      position: relative;
-      overflow: hidden;
-      box-shadow:
-        inset 0 2px 10px rgba(0, 0, 0, 0.3),
-        0 0 0 2px rgba(99, 102, 241, 0.3);
-    }
-
-    .icon-glow-left {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 50%;
-      height: 100%;
-      background: linear-gradient(90deg, rgba(59, 130, 246, 0.4) 0%, transparent 100%);
-      border-radius: 24px 0 0 24px;
-      animation: glowPulse 3s ease-in-out infinite;
-    }
-
-    .icon-glow-right {
-      position: absolute;
-      right: 0;
-      top: 0;
-      width: 50%;
-      height: 100%;
-      background: linear-gradient(270deg, rgba(255, 107, 53, 0.4) 0%, transparent 100%);
-      border-radius: 0 24px 24px 0;
-      animation: glowPulse 3s ease-in-out infinite 0.5s;
-    }
-
-    @keyframes glowPulse {
-      0%, 100% {
-        opacity: 0.4;
-      }
-      50% {
-        opacity: 0.7;
-      }
-    }
-
-    .icon-pattern {
-      position: absolute;
-      inset: 20px;
-      background-image:
-        repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(255, 255, 255, 0.05) 10px, rgba(255, 255, 255, 0.05) 20px);
-      border-radius: 12px;
-    }
-
-    .logo-text {
-      font-size: 96px;
+    .logo {
+      font-size: 84px;
       font-weight: 800;
-      color: #fff;
-      margin: 0;
-      padding: 12px 24px;
-      letter-spacing: 4px;
+      margin-bottom: 10px;
       text-shadow:
-        0 0 30px rgba(255, 255, 255, 0.4),
-        0 0 40px rgba(99, 102, 241, 0.3),
-        0 0 50px rgba(255, 107, 53, 0.2),
-        0 4px 8px rgba(0, 0, 0, 0.4);
-      position: relative;
-      display: inline-block;
-      overflow: visible;
-      line-height: 1.1;
-      animation: titlePulse 4s ease-in-out infinite;
-    }
-
-    @keyframes titlePulse {
-      0%, 100% {
-        text-shadow:
-          0 0 30px rgba(255, 255, 255, 0.4),
-          0 0 40px rgba(99, 102, 241, 0.3),
-          0 0 50px rgba(255, 107, 53, 0.2),
-          0 4px 8px rgba(0, 0, 0, 0.4);
-      }
-      50% {
-        text-shadow:
-          0 0 40px rgba(255, 255, 255, 0.5),
-          0 0 60px rgba(99, 102, 241, 0.4),
-          0 0 80px rgba(255, 107, 53, 0.3),
-          0 4px 8px rgba(0, 0, 0, 0.4);
-      }
+        0 2px 4px rgba(0, 0, 0, 0.4),
+        0 8px 16px rgba(99, 102, 241, 0.3),
+        0 16px 32px rgba(255, 107, 53, 0.2);
+      animation: fadeIn 0.5s ease-out 0.7s both;
+      letter-spacing: -2px;
     }
 
     .tagline {
-      font-size: 16px;
-      color: rgba(255, 255, 255, 0.8);
-      margin: 24px 0 0;
-      font-weight: 500;
-      letter-spacing: 4px;
+      font-size: 18px;
+      letter-spacing: 2px;
       text-transform: uppercase;
-      opacity: 0.9;
-      animation: taglineFade 1.8s ease-out 0.6s both;
+      opacity: 0.7;
+      font-weight: 500;
+      margin-bottom: 40px;
+      animation: fadeIn 0.5s ease-out 1.0s both;
     }
 
-    @keyframes taglineFade {
+    @keyframes fadeIn {
       from {
         opacity: 0;
-        transform: translateY(15px);
+        transform: translateY(10px);
       }
       to {
-        opacity: 0.9;
+        opacity: 1;
         transform: translateY(0);
       }
     }
 
     .status-message {
-      font-size: 16px;
-      color: rgba(255, 255, 255, 0.95);
-      margin: 0 0 24px;
-      min-height: 24px;
-      animation: statusFade 0.5s ease-in-out;
-      font-weight: 400;
-      letter-spacing: 1px;
-    }
-
-    @keyframes statusFade {
-      from {
-        opacity: 0;
-        transform: translateY(-10px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .progress-container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 0 24px;
+      font-size: 14px;
+      margin-bottom: 16px;
+      min-height: 20px;
+      opacity: 0.85;
+      padding: 0 20px;
     }
 
     .progress-bar {
-      position: relative;
-      width: 100%;
+      width: 280px;
       height: 6px;
-      background: rgba(255, 255, 255, 0.15);
+      background: rgba(255, 255, 255, 0.08);
       border-radius: 3px;
-      margin: 0 auto;
       overflow: hidden;
-      animation: progressFadeIn 1s ease-out 0.8s both;
-      box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.3);
-    }
-
-    @keyframes progressFadeIn {
-      from {
-        opacity: 0;
-        transform: scaleX(0.8);
-      }
-      to {
-        opacity: 1;
-        transform: scaleX(1);
-      }
+      margin: 0 auto 20px;
+      animation: fadeIn 0.3s ease-out 1.2s both;
     }
 
     .progress-fill {
-      position: absolute;
-      top: 0;
-      left: 0;
       height: 100%;
-      /* Beautiful gradient - inspired by web version */
-      background: linear-gradient(90deg, #ff6b35 0%, #6366f1 40%, #3b82f6 70%, #818cf8 100%);
+      background: linear-gradient(90deg, #FF6B35 0%, #6366F1 50%, #3B82F6 100%);
       border-radius: 3px;
       width: 0%;
-      transition: width 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-      box-shadow:
-        0 0 15px rgba(255, 107, 53, 0.5),
-        0 0 30px rgba(99, 102, 241, 0.4),
-        0 0 45px rgba(59, 130, 246, 0.3);
+      transition: width 0.3s ease;
+      box-shadow: 0 0 12px rgba(99, 102, 241, 0.5);
       position: relative;
+      overflow: hidden;
     }
 
     .progress-fill::after {
@@ -313,111 +188,53 @@
       left: -100%;
       width: 100%;
       height: 100%;
-      background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.4), transparent);
-      animation: shimmer 2.5s linear infinite;
+      background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
+      animation: shimmer 2s linear infinite;
     }
 
     @keyframes shimmer {
-      to {
-        left: 100%;
-      }
+      to { left: 100%; }
     }
 
-    .version {
-      position: absolute;
-      bottom: 32px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 13px;
-      color: rgba(255, 255, 255, 0.5);
-      animation: fadeIn 1.2s ease-out 1.2s both;
-      z-index: 2;
-      letter-spacing: 1px;
+    .spinner {
+      display: inline-block;
+      width: 48px;
+      height: 48px;
+      border: 3px solid transparent;
+      border-radius: 50%;
+      border-top-color: #FF6B35;
+      border-right-color: #6366F1;
+      border-bottom-color: #3B82F6;
+      animation: spin 1.5s linear infinite, fadeIn 0.3s ease-out 1.3s both;
     }
 
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
-    }
-
-    /* Responsive adjustments */
-    @media (max-width: 768px) {
-      .logo-text {
-        font-size: 64px;
-        letter-spacing: 2px;
-        padding: 8px 16px;
-      }
-
-      .tagline {
-        font-size: 14px;
-        letter-spacing: 3px;
-      }
-
-      .app-icon {
-        width: 120px;
-        height: 120px;
-      }
-
-      .progress-container {
-        max-width: 400px;
-      }
-    }
-
-    /* Accessibility: Reduced motion */
-    @media (prefers-reduced-motion: reduce) {
-      *,
-      *::before,
-      *::after {
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-      }
-
-      #particles {
-        display: none;
-      }
+    @keyframes spin {
+      to { transform: rotate(360deg); }
     }
   </style>
 </head>
 <body>
-  <!-- Enhanced cosmic starfield particle canvas -->
   <canvas id="particles"></canvas>
 
   <div class="splash-container">
-    <div class="logo-container">
-      <!-- Modern geometric icon - inspired by clapperboard but distinct for desktop -->
-      <div class="logo-icon">
-        <div class="app-icon">
-          <div class="icon-base">
-            <div class="icon-glow-left"></div>
-            <div class="icon-glow-right"></div>
-            <div class="icon-pattern"></div>
-          </div>
-        </div>
-      </div>
-
-      <h1 class="logo-text">Aura</h1>
-      <p class="tagline">AI Video Generation Suite</p>
+    <div class="icon-container">
+      <img src="./icon.png" class="app-icon" alt="Aura">
     </div>
 
-    <div class="status-message" id="status">Starting backend server...</div>
+    <div class="logo">Aura</div>
+    <div class="tagline">AI Video Generation Suite</div>
 
-    <div class="progress-container">
-      <div class="progress-bar">
-        <div class="progress-fill" id="progress"></div>
-      </div>
+    <div class="status-message" id="status">Starting application...</div>
+
+    <div class="progress-bar">
+      <div class="progress-fill" id="progress"></div>
     </div>
+
+    <div class="spinner"></div>
   </div>
 
-  <div class="version" id="version">v1.0.0</div>
-
   <script>
-    // Enhanced cosmic starfield particle system - more particles for desktop
-    const PARTICLE_COUNT = 400;
+    const PARTICLE_COUNT = 150;
     const RESIZE_DEBOUNCE_MS = 100;
 
     class Particle {
@@ -428,31 +245,22 @@
 
       reset() {
         this.x = Math.random() * window.innerWidth;
-        this.y = Math.random() * window.innerHeight;
-        this.size = Math.random() * 3 + 0.5;
-        this.speedY = (Math.random() - 0.5) * 0.4;
-        this.speedX = (Math.random() - 0.5) * 0.4;
-        this.opacity = Math.random() * 0.7 + 0.2;
+        this.y = window.innerHeight + Math.random() * 100;
+        this.size = Math.random() * 3 + 1;
+        this.speedY = Math.random() * 0.5 + 0.2;
+        this.speedX = (Math.random() - 0.5) * 0.3;
+        this.opacity = Math.random() * 0.6 + 0.2;
 
-        // Cosmic colors - inspired by web version
-        const colors = ['#6366F1', '#818CF8', '#3B82F6', '#60A5FA', '#A855F7', '#C084FC', '#FF6B35', '#FF8960', '#F59E0B'];
-        this.color = colors[Math.floor(Math.random() * colors.length)] || colors[0];
+        const colors = ['#FF6B35', '#6366F1', '#3B82F6'];
+        this.color = colors[Math.floor(Math.random() * colors.length)];
       }
 
       update() {
-        this.y += this.speedY;
+        this.y -= this.speedY;
         this.x += this.speedX;
 
-        // Wrap around edges for continuous starfield
         if (this.y < -10) {
-          this.y = this.canvas.height + 10;
-        } else if (this.y > this.canvas.height + 10) {
-          this.y = -10;
-        }
-        if (this.x < -10) {
-          this.x = this.canvas.width + 10;
-        } else if (this.x > this.canvas.width + 10) {
-          this.x = -10;
+          this.reset();
         }
       }
 
@@ -460,7 +268,7 @@
         ctx.save();
         ctx.globalAlpha = this.opacity;
         ctx.fillStyle = this.color;
-        ctx.shadowBlur = 10;
+        ctx.shadowBlur = 8;
         ctx.shadowColor = this.color;
         ctx.beginPath();
         ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
@@ -469,28 +277,22 @@
       }
     }
 
-    // Initialize canvas with high DPI support
     const canvas = document.getElementById('particles');
     const ctx = canvas.getContext('2d');
+
     const dpr = window.devicePixelRatio || 1;
+    canvas.width = window.innerWidth * dpr;
+    canvas.height = window.innerHeight * dpr;
+    canvas.style.width = window.innerWidth + 'px';
+    canvas.style.height = window.innerHeight + 'px';
+    ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
 
-    function resizeCanvas() {
-      canvas.width = window.innerWidth * dpr;
-      canvas.height = window.innerHeight * dpr;
-      canvas.style.width = window.innerWidth + 'px';
-      canvas.style.height = window.innerHeight + 'px';
-      ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
-    }
-
-    resizeCanvas();
-
-    // Create enhanced particle system
     const particles = [];
     for (let i = 0; i < PARTICLE_COUNT; i++) {
       particles.push(new Particle(canvas));
+      particles[i].y = Math.random() * window.innerHeight;
     }
 
-    // Animation loop
     function animate() {
       ctx.clearRect(0, 0, window.innerWidth, window.innerHeight);
 
@@ -504,19 +306,19 @@
 
     animate();
 
-    // Handle window resize
     let resizeTimeout;
     window.addEventListener('resize', () => {
       clearTimeout(resizeTimeout);
       resizeTimeout = setTimeout(() => {
-        resizeCanvas();
-        particles.forEach(particle => {
-          particle.canvas = canvas;
-        });
+        const dpr = window.devicePixelRatio || 1;
+        canvas.width = window.innerWidth * dpr;
+        canvas.height = window.innerHeight * dpr;
+        canvas.style.width = window.innerWidth + 'px';
+        canvas.style.height = window.innerHeight + 'px';
+        ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
       }, RESIZE_DEBOUNCE_MS);
     });
 
-    // Listen for progress updates from Electron main process
     const { ipcRenderer } = require('electron');
 
     ipcRenderer.on('status-update', (event, data) => {
@@ -531,14 +333,6 @@
         progressEl.style.width = data.progress + '%';
       }
     });
-
-    // Try to get version from package.json if available
-    try {
-      const { app } = require('electron');
-      // Version would be set by main process if needed
-    } catch (e) {
-      // Not available in renderer, that's fine
-    }
   </script>
 </body>
 </html>
